--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
 		    <artifactId>commons-lang</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
