--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,17 @@
 				</excludes>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<configuration>
+					<instructions>
+						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}",org.jboss.remoting.transport.servlet;version="${project.version}</Export-Package>
+						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
