--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 		<artifactId>org.nightlabs.jfire.parent</artifactId>
 		<groupId>org.nightlabs.jfire</groupId>
 		<version>1.2.0-SNAPSHOT</version>
+		<relativePath>../org.nightlabs.jfire.parent/pom.xml</relativePath>
 	</parent>
 	<groupId>org.nightlabs.jfire</groupId>
 	<artifactId>org.nightlabs.jfire.min.assembly</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<dependencies>
