Some fixes preventing classes from being deployed within multiple projects.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@19159 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
 			<groupId>org.nightlabs</groupId>
 			<artifactId>org.nightlabs.singleton</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.xml</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
