--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 					<instructions>
 						<!-- SPECIAL CASE HERE as the bundle name does not correspond to the base package name. -->						
 						<Export-Package>
-							org.nightlabs.jfire.*;version="${project.version}"
+							org.nightlabs.jfire.*.dao;version="${project.version}"
 						</Export-Package>
 					</instructions>
 				</configuration>
