--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.util</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.nightlabs</groupId>
 			<artifactId>org.nightlabs.classloader.delegating</artifactId>
 			<scope>provided</scope>
 		</dependency>		
