Added missing org.nightlabs.xml (was not mentioned in application.xml).
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@19170 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,11 @@
 							<artifactId>org.nightlabs.singleton</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>org.nightlabs</groupId>
+							<artifactId>org.nightlabs.xml</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
