--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+	
         <plugins>
 			<!-- use the BND MANIFEST.MF: -->
 			<plugin>
