mavenization - A try to overcome the nl and jfire split packages
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@19202 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,10 @@
 					<instructions>
 						<!-- SPECIAL CASE HERE as the bundle name does not correspond to the 
 							base package name. -->
-						<Export-Package>org.nightlabs.jfire.*;version="${project.version}"</Export-Package>
+						<Export-Package>
+org.nightlabs.jfire.base.*;base=split;mandatory:="base";version="${project.version}",
+org.nightlabs.jfire.jdo.notification.*;base=split;mandatory:="base";version="${project.version}",
+org.nightlabs.jfire.*;version="${project.version}"</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
