--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 					<instructions>
 						<!-- SPECIAL CASE HERE as the bundle name does not correspond to the base package name. -->						
 						<Export-Package>
-							org.nightlabs.jfire.organisation.*;version="${project.version}"
+							org.nightlabs.jfire.organisation.*;version="${project.version}";-split-package:=first
 						</Export-Package>
 					</instructions>
 				</configuration>
