--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,25 @@
 				</excludes>
 			</resource>
 		</resources>
+		<plugins>
+		<plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-bundle</id>
+            <phase>package</phase>
+            <goals>
+              <goal>bundle</goal>
+            </goals>
+            <configuration>
+              <instructions>
+                <Export-Package>org.nightlabs.jfire.classloader.remote;version="1.2.0-SNAPSHOT";-split-package:=first</Export-Package>
+              </instructions>
+            </configuration>
+          </execution>
+          </executions>
+          </plugin>
+      </plugins>
 	</build>
 </project>
