mavenization - A try to overcome the nl and jfire split packages
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireRCLBackendBean@19217 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -65,5 +65,19 @@
 				</excludes>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<configuration>
+					<instructions>
+						<!-- FIXME bundle name does not correspond to the base package name. -->						
+						<Export-Package>
+							org.nightlabs.jfire.classloader.remote.backend.*;version="${project.version}";-split-package:=first
+						</Export-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
