--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,11 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
 					<instructions>
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}",org.jboss.remoting.transport.servlet;version="${project.version}</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+					<!-- FIXME Needed special declaration because of split package org.jboss.remoting.transport.server and because packages not under project scope -->
+						<Export-Package>
+org.nightlabs.jfire.asyncinvoke.dao;version="${project.version}";-split-package:=first,
+!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"
+						</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
