--- a/pom.xml
+++ b/pom.xml
@@ -410,6 +410,16 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.geronimo.specs</groupId>
+				<artifactId>geronimo-activation_1.1_spec</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>javax.jmdns</groupId>
+			    <artifactId>jmdns</artifactId>
+			    <version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.geronimo.specs</groupId>
 				<artifactId>geronimo-j2ee-connector_1.6_spec</artifactId>
 				<version>1.0</version>
 			</dependency>
