added org.nightlabs.jfire.min.assembly to dependency management.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@19242 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
+				<artifactId>org.nightlabs.jfire.min.assembly</artifactId>
+				<version>${project.version}</version>
+				<type>zip</type>
+				<classifier>bin</classifier>
+			</dependency>
+			<dependency>
+				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.numorgid</artifactId>
 				<version>${project.version}</version>
 			</dependency>
